--- a/FlowCrypt/src/main/res/layout/pgp_show_original_message.xml
+++ b/FlowCrypt/src/main/res/layout/pgp_show_original_message.xml
@@ -10,7 +10,7 @@
     android:layout_height="wrap_content">
 
     <Switch
-        android:id="@+id/switchShowOriginalMessage"
+        android:id="@+id/switchShowOrigMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewOriginalPgpMessage"
+        android:id="@+id/textViewOrigPgpMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin_content_small"
@@ -29,7 +29,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switchShowOriginalMessage"
+        app:layout_constraintTop_toBottomOf="@+id/switchShowOrigMsg"
         tools:text="-----BEGIN PGP PUBLIC KEY-----\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\nxxxxx\n-----END PGP PUBLIC KEY-----"
         tools:visibility="visible" />
 
