Removed package 'com.yourorg.sample'. Refactored code.| #411

--- a/FlowCrypt/src/main/res/xml/preferences_experimental_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_experimental_settings.xml
@@ -19,7 +19,7 @@
         android:title="Node backend test"
         app:iconSpaceReserved="false">
         <intent
-            android:targetClass="com.yourorg.sample.ui.activity.SplashActivity"
+            android:targetClass="com.flowcrypt.email.ui.activity.NodeSplashActivity"
             android:targetPackage="@string/application_id" />
     </androidx.preference.Preference>
 </androidx.preference.PreferenceScreen>
