--- a/FlowCrypt/src/main/res/layout/activity_main.xml
+++ b/FlowCrypt/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yourorg.sample.ui.activity.MainActivity">
+    tools:context=".ui.activity.NodeTestActivity">
 
     <Button
         android:id="@+id/btnVersion"
