Modified the splash screen logic. Added starting Node.js at the app startup.

--- a/FlowCrypt/src/main/res/drawable/splash_screen_background.xml
+++ b/FlowCrypt/src/main/res/drawable/splash_screen_background.xml
@@ -4,6 +4,11 @@
   ~ Contributors: DenBond7
   -->
 
+<!--
+  ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
+  ~ Contributors: DenBond7
+  -->
+
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <!-- The background color, preferably the same as your normal theme -->
@@ -12,6 +17,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/ic_splash" />
+            android:src="@mipmap/logo_flowcrypt" />
     </item>
 </layer-list>
