--- a/FlowCrypt/src/main/res/layout/fragment_private_keys.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_private_keys.xml
@@ -19,12 +19,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listViewKeys"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewKeys"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/aluminum"
-        android:dividerHeight="1dp"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
