--- a/FlowCrypt/src/main/res/layout/key_item.xml
+++ b/FlowCrypt/src/main/res/layout/key_item.xml
@@ -8,6 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <TextView
