--- a/FlowCrypt/src/main/res/layout/activity_splash.xml
+++ b/FlowCrypt/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flowcrypt.email.ui.activity.SplashActivity">
+    tools:context="com.flowcrypt.email.ui.activity.SignInActivity">
 
     <!--We've added android:layout_marginBottom="24dp" to prevent wrong centering-->
     <ImageView
