Added tests for some decrypt errors.| #444

--- a/FlowCrypt/src/main/res/layout/message_part_pgp_message_format_error.xml
+++ b/FlowCrypt/src/main/res/layout/message_part_pgp_message_format_error.xml
@@ -11,7 +11,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textViewFormatError"
+        android:id="@+id/textViewErrorMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/default_margin_medium"
