--- a/FlowCrypt/src/main/res/layout/activity_pass_phrase_manager.xml
+++ b/FlowCrypt/src/main/res/layout/activity_pass_phrase_manager.xml
@@ -41,9 +41,7 @@
             app:layout_constraintTop_toBottomOf="@+id/progressBar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:id="@+id/layoutContentView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
