--- a/FlowCrypt/src/main/res/layout/add_account.xml
+++ b/FlowCrypt/src/main/res/layout/add_account.xml
@@ -5,13 +5,15 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/viewIdAddNewAccount"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
-    android:id="@+id/viewIdAddNewAccount"
     android:focusable="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="Overdraw">
 
     <ImageView
         android:id="@+id/imageViewActiveUserPhoto"
