--- a/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
@@ -3,34 +3,30 @@
   ~ Contributors: DenBond7
   -->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:paddingLeft="@dimen/padding_pgp_message_error_big"
+    android:paddingTop="@dimen/padding_pgp_message_error_small"
+    android:paddingRight="@dimen/padding_pgp_message_error_small"
+    android:paddingBottom="@dimen/padding_pgp_message_error_small">
 
-    <item>
+    <item android:gravity="left">
         <shape>
             <solid android:color="@android:color/white" />
         </shape>
     </item>
 
-    <item>
+    <item android:gravity="left">
         <shape android:shape="rectangle">
             <stroke
-                android:width="1dp"
+                android:width="@dimen/default_single_dip"
                 android:color="@color/light" />
         </shape>
     </item>
 
-    <item>
-        <inset
-            android:insetBottom="@dimen/width_pgp_message_type_line_inverse"
-            android:insetLeft="0dp"
-            android:insetRight="@dimen/width_pgp_message_type_line_inverse"
-            android:insetTop="@dimen/width_pgp_message_type_line_inverse">
-            <shape>
-                <stroke
-                    android:width="@dimen/width_pgp_message_type_line"
-                    android:color="@color/gray" />
-            </shape>
-        </inset>
+    <item android:gravity="left">
+        <shape>
+            <size android:width="@dimen/width_pgp_message_type_line" />
+            <solid android:color="@color/gray" />
+        </shape>
     </item>
-
 </layer-list>
