--- a/FlowCrypt/src/main/res/layout/fragment_corrupted_storage.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_corrupted_storage.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
   ~ Contributors: DenBond7
   -->
@@ -52,7 +51,8 @@
         app:layout_constraintBottom_toTopOf="@+id/textViewBadPaddingException"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textViewBadPaddingException"
@@ -66,7 +66,8 @@
         app:layout_constraintBottom_toTopOf="@+id/textViewFooter"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeException" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeException"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textViewFooter"
