--- a/FlowCrypt/src/main/res/values/strings_dev_settings.xml
+++ b/FlowCrypt/src/main/res/values/strings_dev_settings.xml
@@ -3,23 +3,22 @@
   ~ Contributors: DenBond7
   -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Preference keys -->
     <string name="preferences_key_build_config_info">pref_key_build_config_info</string>
     <string name="preferences_key_is_write_logs_to_file_enable">preferences_key_is_write_logs_to_file_enable</string>
-    <string name="preferences_key_is_detect_memory_leak_enable">preferences_key_is_detect_memory_leak_enable</string>
-    <string name="preferences_key_is_acra_enable">preferences_key_is_acra_enable</string>
+    <string name="preferences_key_is_detect_memory_leak_enable" tools:ignore="UnusedResources">preferences_key_is_detect_memory_leak_enable</string>
+    <string name="preferences_key_is_acra_enable" tools:ignore="UnusedResources">preferences_key_is_acra_enable</string>
     <string name="preferences_key_is_mail_debug_enable">preferences_key_is_mail_debug_enable</string>
 
     <!-- Strings related to Settings -->
     <string name="preferences_title_debugging">Debugging</string>
     <string name="preferences_title_build_config_info">Build config info</string>
     <string name="toast_message_press_force_stop_to_apply_changes">Please press "Force stop" to apply changes</string>
-    <string name="preferences_category_title_logs">Logs</string>
     <string name="preferences_title_enable_write_api_logs_to_file">Enable write API logs to the file</string>
-    <string name="preferences_title_enable_detect_memory_leak">Enable detect memory leak</string>
-    <string name="preferences_title_enable_acra">Enable ACRA(App Crash Reports)</string>
+    <string name="preferences_title_enable_detect_memory_leak" tools:ignore="UnusedResources">Enable detect memory leak</string>
+    <string name="preferences_title_enable_acra" tools:ignore="UnusedResources">Enable ACRA(App Crash Reports)</string>
     <string name="preferences_title_enable_mail_debug">Enable Mail debug</string>
     <string name="action_dev_settings">Dev Settings</string>
 </resources>
