--- a/FlowCrypt/src/main/res/layout/contact_item.xml
+++ b/FlowCrypt/src/main/res/layout/contact_item.xml
@@ -28,8 +28,8 @@
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="@dimen/default_button_height"
-        android:layout_marginEnd="@dimen/default_margin_content_small"
         android:layout_marginTop="@dimen/default_margin_content_small"
+        android:layout_marginEnd="@dimen/default_margin_content_small"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/imageButtonDeleteContact"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
@@ -82,9 +82,10 @@
         android:id="@+id/imageButtonDeleteContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/default_margin_content_small"
         android:layout_marginTop="@dimen/default_margin_content_small"
+        android:layout_marginEnd="@dimen/default_margin_content_small"
         android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/delete"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintTop_toTopOf="parent"
