--- a/FlowCrypt/src/main/res/layout/check_account_credentionals.xml
+++ b/FlowCrypt/src/main/res/layout/check_account_credentionals.xml
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.367"
+        android:contentDescription="@string/logo"
         app:srcCompat="@mipmap/logo_flowcrypt" />
 
     <TextView
